🚧 wip (App Frontend): branch: admin-tools

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -110,6 +110,7 @@
 	"todoCompleteSignupHelp": "Erledige alle Aufgaben und klicke anschließend auf den Button unten, um die Anmeldung abzuschließen und am Auswahlverfahren teilzunehmen.",
 	"todoApplyForRole": "Auf eine (oder mehrere) Rolle(n) bewerben",
 	"todoApplyForRoleHelp": "Um sich auf mehrere Rollen zu bewerben, folge einfach dem Anmeldeprozess für Einzelbewerbungen erneut.",
+	"delegation": "Delegation",
 	"delegationStatus": "Delegationsstatus",
 	"delegationMembers": "Delegationsmitglieder",
 	"name": "Name",
@@ -327,5 +328,29 @@
 	"participantCare": "Teilnehmendenbetreuung",
 	"authorization": "Berechtigung",
 	"open": "Öffnen",
-	"administrationConferenceSelection": "Wähle die Konferenz aus, die du verwalten möchtest. Wenn die Konferenz nicht angezeigt wird, lade die Seite neu oder wende dich an einen Administrator."
+	"administrationConferenceSelection": "Wähle die Konferenz aus, die du verwalten möchtest. Wenn die Konferenz nicht angezeigt wird, lade die Seite neu oder wende dich an einen Administrator.",
+	"adminSettings": "Einstellungen",
+	"adminStats": "Statistiken",
+	"adminPlausibility": "Plausibilität",
+	"adminUsers": "Teilnehmende",
+	"adminDelegations": "Delegationen",
+	"adminSingleParticipants": "Einzelteilnehmende",
+	"adminSupervisors": "Betreuende",
+	"adminConferenceSelection": "Konferenzauswahl",
+	"familyName": "Nachname",
+	"givenName": "Vorname",
+	"conferenceAge": "Konferenzalter",
+	"adminUserCard": "Teilnehmedenkartei",
+	"adminUserCardDetails": "Details",
+	"adminUserCardStatus": "Status",
+	"adminUserCardRole": "Rolle",
+	"plausibilityOverview": "Plausibilitätsbericht",
+	"plausibilityTooYoung": "Teilnehmende*r zu jung",
+	"plausibilityTooOld": "Teilnehmende*r zu alt",
+	"plausibilityShouldBeSupervisor": "Sollte Betreuer*in sein",
+	"plausibilityShouldNotBeSupervisor": "Sollte kein*e Betreuer*in sein",
+	"plausibilityIncompleteOrInvalidData": "Unvollständige oder ungültige Daten",
+	"plausibilityCategory": "Kategorie",
+	"plausibilityFinding": "Befund",
+	"plausibilityCount": "Anzahl"
 }
