🚧 wip (App Frontend): Admin Dashboard branch: admin-tools

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -366,5 +366,7 @@
 	"participationType": "Teilnahmeart",
 	"delegationMember": "Delegationsmitglied",
 	"tables": "Tabellen",
-	"tools": "Tools"
+	"tools": "Tools",
+	"years": "Jahre",
+	"averageAge": "Durchschnittsalter"
 }
