--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -327,5 +327,9 @@
 	"participantCare": "Teilnehmendenbetreuung",
 	"authorization": "Berechtigung",
 	"open": "Öffnen",
-	"administrationConferenceSelection": "Wähle die Konferenz aus, die du verwalten möchtest. Wenn die Konferenz nicht angezeigt wird, lade die Seite neu oder wende dich an einen Administrator."
+	"administrationConferenceSelection": "Wähle die Konferenz aus, die du verwalten möchtest. Wenn die Konferenz nicht angezeigt wird, lade die Seite neu oder wende dich an einen Administrator.",
+	"pathDoesNotExist": "Der Pfad {path} konnte nicht gefunden werden ({error})",
+	"forbidden": "Zugriff verweigert. Bitte lade ggf. die Seite neu! ({error})",
+	"unauthorized": "Unauthorisiert. Bitte lade ggf. die Seite neu! ({error})",
+	"internalServerError": "Interner Serverfehler."
 }
