--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -391,6 +391,11 @@
 	"conferenceRegistrationSettings": "Einstellungen zur Anmeldephase",
 	"conferenceStartRegistration": "Start der Anmeldung",
 	"conferenceEndRegistration": "Ende der Anmeldung",
+	"conferenceStatus": "Konferenzstatus",
+	"conferenceStatusPre": "Vor der Konferenz",
+	"conferenceStatusActive": "Aktive Konferenz",
+	"conferenceStatusPost": "Nach der Konferenz",
+	"conferenceDataSavingPrompt": "Bist du sicher, dass du die Änderungen speichern möchtest? Alle grün markierten Felder werden verändert.",
 	"pathDoesNotExist": "Der Pfad {path} konnte nicht gefunden werden ({error})",
 	"forbidden": "Zugriff verweigert. Bitte lade ggf. die Seite neu! ({error})",
 	"unauthorized": "Unauthorisiert. Bitte lade ggf. die Seite neu! ({error})",
