🔤 typing (App Frontend): branch: admin-tools

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -396,6 +396,9 @@
 	"conferenceStatusActive": "Aktive Konferenz",
 	"conferenceStatusPost": "Nach der Konferenz",
 	"conferenceDataSavingPrompt": "Bist du sicher, dass du die Änderungen speichern möchtest? Alle grün markierten Felder werden verändert.",
+	"confirmRevokeApplication": "Möchtest du den Bewerbungsstatus wirklich zurücksetzen?",
+	"confirmRotateCode": "Möchtest du den Einladecode wirklich erneuern?",
+	"reloadToSeeChanges": "Lade die Seite neu, um die Änderungen zu sehen.",
 	"notEnoughData": "Nicht genügend Daten",
 	"pathDoesNotExist": "Der Pfad {path} konnte nicht gefunden werden ({error})",
 	"forbidden": "Zugriff verweigert. Bitte lade ggf. die Seite neu! ({error})",
