chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -376,7 +376,7 @@
 	"daysUntilConference": "Tage bis zur Konferenz",
 	"daysUntilEndRegistration": "Tage bis Anmeldeschluss",
 	"historyComparison": "Historienvergleich",
-	"historyComparisonDescription": "Die Statistikübersicht verfügt über die Möglichkeit, Anmeldestatistiken lokal auf Ihrem Gerät für spätere Vergleiche zu speichern. Dies geschieht automatisch, in du dich einloggst. Pro Tag wird ein neuer Datensatz erstellt. Die Daten werden lokal auf deinem Gerät gespeichert und nicht an die Server übertragen.<br>Der jeweils letzte Datensatz wird standardmäßig angezeigt. Du kannst jedoch hier auch ältere Datensätze auswählen, um sie mit dem aktuellen Stand zu vergleichen.",
+	"historyComparisonDescription": "Die Statistikübersicht verfügt über die Möglichkeit, Anmeldestatistiken lokal auf Ihrem Gerät für spätere Vergleiche zu speichern. Dies geschieht automatisch, in du diese Seite aufrufst. Pro Tag wird ein neuer Datensatz erstellt. Die Daten werden lokal auf deinem Gerät gespeichert und nicht an die Server übertragen.<br>Der jeweils letzte Datensatz wird standardmäßig angezeigt. Du kannst jedoch hier auch ältere Datensätze auswählen, um sie mit dem aktuellen Stand zu vergleichen.",
 	"noHistory": "Keine Historie vorhanden",
 	"conferenceSettings": "Konferenzeinstellungen",
 	"conferenceTitle": "Konferenzname",
@@ -395,7 +395,7 @@
 	"conferenceStatusPre": "Vor der Konferenz",
 	"conferenceStatusActive": "Aktive Konferenz",
 	"conferenceStatusPost": "Nach der Konferenz",
-	"conferenceDataSavingPrompt": "Bist du sicher, dass du die Änderungen speichern möchtest? Alle grün markierten Felder werden verändert.",
+	"conferenceDataSavingPrompt": "Bist du sicher, dass du die Änderungen speichern möchtest? Alle grün markierten Felder werden live verändert.",
 	"confirmRevokeApplication": "Möchtest du den Bewerbungsstatus wirklich zurücksetzen?",
 	"confirmRotateCode": "Möchtest du den Einladecode wirklich erneuern?",
 	"reloadToSeeChanges": "Lade die Seite neu, um die Änderungen zu sehen.",
