--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -109,6 +109,7 @@
 	"todoCompleteSignupHelp": "Complete all tasks and then click the button below to finalize your registration and participate in the selection process.",
 	"todoApplyForRole": "Apply for one (or more) roles",
 	"todoApplyForRoleHelp": "To apply for multiple roles, simply follow the single application process again.",
+	"delegation": "Delegation",
 	"delegationStatus": "Delegation Status",
 	"delegationMembers": "Delegation Members",
 	"name": "Name",
@@ -218,6 +219,7 @@
 	"delegations": "Delegations",
 	"noDelegationsFound": "No delegations found",
 	"singleParticipants": "Single Participants",
+	"singleParticipant": "Individual Participant",
 	"noSingleApplicationTrackingYet": "Status tracking for single applications is not yet available.",
 	"applied": "Applied",
 	"notApplied": "Application not yet submitted",
@@ -325,5 +327,75 @@
 	"participantCare": "Participant Care",
 	"authorization": "Authorization",
 	"open": "Open",
-	"administrationConferenceSelection": "Select the conference you want to manage. If you don't see the conference, refresh the page or contact an administrator."
+	"administrationConferenceSelection": "Select the conference you want to manage. If you don't see the conference, refresh the page or contact an administrator.",
+	"adminSettings": "Settings",
+	"adminStats": "Statistics",
+	"adminPlausibility": "Plausibility",
+	"adminUsers": "Participants",
+	"adminDelegations": "Delegations",
+	"adminSingleParticipants": "Individual Participants",
+	"adminSupervisors": "Supervisors",
+	"adminConferenceSelection": "Conference Selection",
+	"familyName": "Family Name",
+	"givenName": "Given Name",
+	"conferenceAge": "Age at Conference",
+	"adminUserCard": "Participant File",
+	"adminUserCardDetails": "Details",
+	"adminUserCardStatus": "Dtatus",
+	"adminUserCardRole": "Role",
+	"plausibilityOverview": "Plausibility Report",
+	"plausibilityTooYoung": "Participant too young",
+	"plausibilityTooOld": "Participant too old",
+	"plausibilityShouldBeSupervisor": "Should be a supervisor",
+	"plausibilityShouldNotBeSupervisor": "Should not be a supervisor",
+	"plausibilityIncompleteOrInvalidData": "Incomplete or invalid data",
+	"plausibilityCategory": "Category",
+	"plausibilityFinding": "Findings",
+	"plausibilityCount": "Number",
+	"registrationCompleted": "Registration completed",
+	"registrationNotCompleted": "Registration not yet completed",
+	"noSupervisors": "No supervisors",
+	"adminActions": "Actions",
+	"revokeApplication": "Revoke Application",
+	"settings": "Settings",
+	"adminPlansAttendance": "Present",
+	"supervisorPlansOwnAttendance": "Supervisor plans own attendance",
+	"supervisorDoesNotPlanOwnAttendance": "Supervisor does not plan to attend the conference",
+	"participationType": "Type of Participation",
+	"delegationMember": "Delegation Member",
+	"tables": "Tables",
+	"tools": "Tools",
+	"years": "Years",
+	"averageAgeOnlyApplied": "Average age at conference (registered only)",
+	"registrationDistribution": "Distribution of Registrations",
+	"registrationsTotal": "Total Registrations",
+	"registrationApplied": "Applied",
+	"registrationNotApplied": "Not applied",
+	"daysUntilConference": "Days until the conference",
+	"daysUntilEndRegistration": "Days until registration deadline",
+	"historyComparison": "Historical Comparison",
+	"historyComparisonDescription": "The statistics overview has the ability to save statistics locally on your device for later comparison. This happens automatically when you access this page. A new record is created every day. The data is stored locally on your device and is not transferred to the servers.<br> The most recent record is displayed by default. However, you can also select older records here to compare them with the current status.",
+	"noHistory": "No history available",
+	"conferenceSettings": "Conference Settings",
+	"conferenceTitle": "Conference Name",
+	"conferenceLongTitle": "Full Name",
+	"conferenceLocation": "Location",
+	"conferenceLanguage": "Conference Language",
+	"conferenceWebsite": "Website",
+	"conferenceStart": "Start Date",
+	"conferenceEnd": "End Date",
+	"selectADate": "Select Date",
+	"conferenceImage": "Conference Image",
+	"conferenceRegistrationSettings": "Settings for the Registration Phase",
+	"conferenceStartRegistration": "Start of Registration",
+	"conferenceEndRegistration": "Registration Deadline",
+	"conferenceStatus": "Conference Status",
+	"conferenceStatusPre": "Before the conference",
+	"conferenceStatusActive": "Active Conference",
+	"conferenceStatusPost": "After the conference",
+	"conferenceDataSavingPrompt": "Are you sure you want to save the changes? All fields marked green will be live changed.",
+	"confirmRevokeApplication": "Are you sure you want to revoke the application?",
+	"confirmRotateCode": "Are you sure you want to renew the invitation code?",
+	"reloadToSeeChanges": "Reload the page to see the changes.",
+	"notEnoughData": "Insufficient data"
 }
