⬆️ improvement (App Frontend): Fix linebreak issues with dates branch: admin-tools

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -35,9 +35,9 @@
 	"unknownLocation": "Ort unbekannt",
 	"unknownDate": "Datum unbekannt",
 	"unknownLanguage": "Sprache unbekannt",
-	"registrationOpen": "Anmeldung möglich bis {date}",
+	"registrationOpen": "Anmeldung möglich bis <span class=\"whitespace-nowrap\">{date}</span>",
 	"registrationClosed": "Anmeldung geschlossen",
-	"registrationNotYetOpen": "Anmeldung startet am {date}",
+	"registrationNotYetOpen": "Anmeldung startet am <span class=\"whitespace-nowrap\">{date}</span>",
 	"unknownRegistrationStatus": "Anmeldestatus unbekannt",
 	"alreadRegistered": "Bereits angemeldet",
 	"RegistrationNotPossible": "Anmeldung nicht möglich",
