--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -35,9 +35,9 @@
 	"unknownLocation": "Unknown location",
 	"unknownDate": "Unknown date",
 	"unknownLanguage": "Language unknown",
-	"registrationOpen": "Registration open until {date}",
+	"registrationOpen": "Registration open until <span class=\"whitespace-nowrap\">{date}</span>",
 	"registrationClosed": "Registration closed",
-	"registrationNotYetOpen": "Registration starts on {date}",
+	"registrationNotYetOpen": "Registration starts on <span class=\"whitespace-nowrap\">{date}</span>",
 	"unknownRegistrationStatus": "Registration status unknown",
 	"alreadRegistered": "Already registered",
 	"RegistrationNotPossible": "Registration not possible",
