--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -405,5 +405,6 @@
 	"pathDoesNotExist": "Der Pfad {path} konnte nicht gefunden werden ({error})",
 	"forbidden": "Zugriff verweigert. Bitte lade ggf. die Seite neu! ({error})",
 	"unauthorized": "Unauthorisiert. Bitte lade ggf. die Seite neu! ({error})",
-	"internalServerError": "Interner Serverfehler."
+	"internalServerError": "Interner Serverfehler.",
+	"ongoingRegistrationPhases": "Laufende Anmeldephasen"
 }
