✨ feature: Admin Tools (#108)
* 🚧 wip (Miscellaneous): MUNBW Seed
branch: 84-implement-munbw-2025-seed

* 🚧 wip (Miscellaneous): MUNBW Seed
branch: 84-implement-munbw-2025-seed

* 🚧 wip (App Frontend):
branch: admin-tools

* 🚧 wip (App Frontend): Admin Dashboard
branch: admin-tools

* 🚧 wip (App Frontend): Admin Dashboard
branch: admin-tools

* 🚧 wip (App Frontend): Admin Dashboard
branch: admin-tools

* ✨ feat (App Frontend): munbw seed
branch: 84-implement-munbw-2025-seed

* 🧼 format & lint (App Frontend):
branch: 84-implement-munbw-2025-seed

* 🚧 wip (App Frontend): Admin Dashboard
branch: admin-tools

* ✨ feat (App Frontend): munbw seed
branch: 84-implement-munbw-2025-seed

* 🧼 format & lint (App Frontend):
branch: 84-implement-munbw-2025-seed

* ✨ feat (App Frontend): Stats Overview
branch: admin-tools

* ✨ feat (App Frontend): Conference Settings
branch: admin-tools

* ✨ feat (App Frontend): Conference Settings
branch: admin-tools

* 🐞 fix (Miscellaneous): MUNBW countries seed correction
branch: admin-tools

* 🧼 format & lint (App Frontend):
branch: admin-tools

* ✨ feat (App Frontend): General improvements to the Admin Dashboard
branch: admin-tools

* 🧼 format & lint (Miscellaneous):
branch: admin-tools

* 🔤 typing (App Frontend):
branch: admin-tools

* 🧹 chore (App Frontend): remove console.logs
branch: admin-tools

* 🐞 fix (App Frontend): Fix top level await
branch: admin-tools

* 🐞 fix (App Frontend): fix missing import
branch: admin-tools

* chore: update translations with Fink 🐦

* ⬆️ improvement (App Frontend): Fix linebreak issues with dates
branch: admin-tools

* 🐞 fix (App Frontend): still show Entry Code after application for supervisors to join
branch: admin-tools

* 🐞 fix (Miscellaneous): Requested Changes
branch: admin-tools

* 🎨 style (App Frontend): fix styling issue
branch: admin-tools

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -35,9 +35,9 @@
 	"unknownLocation": "Ort unbekannt",
 	"unknownDate": "Datum unbekannt",
 	"unknownLanguage": "Sprache unbekannt",
-	"registrationOpen": "Anmeldung möglich bis {date}",
+	"registrationOpen": "Anmeldung möglich bis <span class=\"whitespace-nowrap\">{date}</span>",
 	"registrationClosed": "Anmeldung geschlossen",
-	"registrationNotYetOpen": "Anmeldung startet am {date}",
+	"registrationNotYetOpen": "Anmeldung startet am <span class=\"whitespace-nowrap\">{date}</span>",
 	"unknownRegistrationStatus": "Anmeldestatus unbekannt",
 	"alreadRegistered": "Bereits angemeldet",
 	"RegistrationNotPossible": "Anmeldung nicht möglich",
@@ -83,6 +83,8 @@
 	"orShareThisCode": "Oder teile folgenden Code, mit dem sie sich auf dieser Website anmelden können (der Code gilt auch für Betreuer*innen):",
 	"inviteMorePeople": "Mehr Menschen einladen",
 	"inviteMorePeopleDescription": "Lade bitte weitere Mitglieder in deine Delegation ein. Die Delegation benötigt mindestens 2 Mitglieder.",
+	"inviteMorePeopleButAlreadyApplied": "Betreuende einladen",
+	"inviteMorePeopleButAlreadyAppliedDescription": "Die Anmeldung ist bereits abgeschlossen, aber du kannst trotzdem über den Code noch Betreuer*innen einladen, falls du dies nicht schon getan hast.",
 	"linkCopied": "Link kopiert",
 	"codeCopied": "Code kopiert",
 	"toDashboard": "Zum Dashboard",
@@ -110,6 +112,7 @@
 	"todoCompleteSignupHelp": "Erledige alle Aufgaben und klicke anschließend auf den Button unten, um die Anmeldung abzuschließen und am Auswahlverfahren teilzunehmen.",
 	"todoApplyForRole": "Auf eine (oder mehrere) Rolle(n) bewerben",
 	"todoApplyForRoleHelp": "Um sich auf mehrere Rollen zu bewerben, folge einfach dem Anmeldeprozess für Einzelbewerbungen erneut.",
+	"delegation": "Delegation",
 	"delegationStatus": "Delegationsstatus",
 	"delegationMembers": "Delegationsmitglieder",
 	"name": "Name",
@@ -219,6 +222,7 @@
 	"delegations": "Delegationen",
 	"noDelegationsFound": "Keine Delegationen gefunden",
 	"singleParticipants": "Einzelteilnehmer*innen",
+	"singleParticipant": "Einzelteilnehmer*in",
 	"noSingleApplicationTrackingYet": "Die Statusverfolgung von Einzelbewerbungen ist derzeit noch nicht möglich.",
 	"applied": "Angemeldet",
 	"notApplied": "Anmeldung ausstehend",
@@ -328,6 +332,76 @@
 	"authorization": "Berechtigung",
 	"open": "Öffnen",
 	"administrationConferenceSelection": "Wähle die Konferenz aus, die du verwalten möchtest. Wenn die Konferenz nicht angezeigt wird, lade die Seite neu oder wende dich an einen Administrator.",
+	"adminSettings": "Einstellungen",
+	"adminStats": "Statistiken",
+	"adminPlausibility": "Plausibilität",
+	"adminUsers": "Teilnehmende",
+	"adminDelegations": "Delegationen",
+	"adminSingleParticipants": "Einzelteilnehmende",
+	"adminSupervisors": "Betreuende",
+	"adminConferenceSelection": "Konferenzauswahl",
+	"familyName": "Nachname",
+	"givenName": "Vorname",
+	"conferenceAge": "Konferenzalter",
+	"adminUserCard": "Teilnehmedenkartei",
+	"adminUserCardDetails": "Details",
+	"adminUserCardStatus": "Status",
+	"adminUserCardRole": "Rolle",
+	"plausibilityOverview": "Plausibilitätsbericht",
+	"plausibilityTooYoung": "Teilnehmende*r zu jung",
+	"plausibilityTooOld": "Teilnehmende*r zu alt",
+	"plausibilityShouldBeSupervisor": "Sollte Betreuer*in sein",
+	"plausibilityShouldNotBeSupervisor": "Sollte kein*e Betreuer*in sein",
+	"plausibilityIncompleteOrInvalidData": "Unvollständige oder ungültige Daten",
+	"plausibilityCategory": "Kategorie",
+	"plausibilityFinding": "Befund",
+	"plausibilityCount": "Anzahl",
+	"registrationCompleted": "Anmeldung abgeschlossen",
+	"registrationNotCompleted": "Anmeldung noch nicht abgeschlossen",
+	"noSupervisors": "Keine Betreuer*innen",
+	"adminActions": "Aktionen",
+	"revokeApplication": "Bewerbungsstatus zurücksetzen",
+	"settings": "Einstellungen",
+	"adminPlansAttendance": "Anwesend",
+	"supervisorPlansOwnAttendance": "Betreuer*in plant eigene Anwesenheit",
+	"supervisorDoesNotPlanOwnAttendance": "Betreuer*in plant nicht bei der Konferenz anwesend zu sein",
+	"participationType": "Teilnahmeart",
+	"delegationMember": "Delegationsmitglied",
+	"tables": "Tabellen",
+	"tools": "Tools",
+	"years": "Jahre",
+	"averageAgeOnlyApplied": "Konferenz-Altersdurchschnitt (nur angemeldete)",
+	"registrationDistribution": "Verteilung der Anmeldungen",
+	"registrationsTotal": "Anmeldungen gesamt",
+	"registrationApplied": "Angemeldet",
+	"registrationNotApplied": "Nicht angemeldet",
+	"daysUntilConference": "Tage bis zur Konferenz",
+	"daysUntilEndRegistration": "Tage bis Anmeldeschluss",
+	"historyComparison": "Historienvergleich",
+	"historyComparisonDescription": "Die Statistikübersicht verfügt über die Möglichkeit, Anmeldestatistiken lokal auf Ihrem Gerät für spätere Vergleiche zu speichern. Dies geschieht automatisch, in du diese Seite aufrufst. Pro Tag wird ein neuer Datensatz erstellt. Die Daten werden lokal auf deinem Gerät gespeichert und nicht an die Server übertragen.<br>Der jeweils letzte Datensatz wird standardmäßig angezeigt. Du kannst jedoch hier auch ältere Datensätze auswählen, um sie mit dem aktuellen Stand zu vergleichen.",
+	"noHistory": "Keine Historie vorhanden",
+	"conferenceSettings": "Konferenzeinstellungen",
+	"conferenceTitle": "Konferenzname",
+	"conferenceLongTitle": "Voller Name",
+	"conferenceLocation": "Ort",
+	"conferenceLanguage": "Konferenzsprache",
+	"conferenceWebsite": "Website",
+	"conferenceStart": "Startdatum",
+	"conferenceEnd": "Enddatum",
+	"selectADate": "Datum auswählen",
+	"conferenceImage": "Konferenzbild",
+	"conferenceRegistrationSettings": "Einstellungen zur Anmeldephase",
+	"conferenceStartRegistration": "Start der Anmeldung",
+	"conferenceEndRegistration": "Ende der Anmeldung",
+	"conferenceStatus": "Konferenzstatus",
+	"conferenceStatusPre": "Vor der Konferenz",
+	"conferenceStatusActive": "Aktive Konferenz",
+	"conferenceStatusPost": "Nach der Konferenz",
+	"conferenceDataSavingPrompt": "Bist du sicher, dass du die Änderungen speichern möchtest? Alle grün markierten Felder werden live verändert.",
+	"confirmRevokeApplication": "Möchtest du den Bewerbungsstatus wirklich zurücksetzen?",
+	"confirmRotateCode": "Möchtest du den Einladecode wirklich erneuern?",
+	"reloadToSeeChanges": "Lade die Seite neu, um die Änderungen zu sehen.",
+	"notEnoughData": "Nicht genügend Daten",
 	"pathDoesNotExist": "Der Pfad {path} konnte nicht gefunden werden ({error})",
 	"forbidden": "Zugriff verweigert. Bitte lade ggf. die Seite neu! ({error})",
 	"unauthorized": "Unauthorisiert. Bitte lade ggf. die Seite neu! ({error})",
