--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -158,6 +158,7 @@
 	"vegetarian": "Vegetarisch",
 	"omnivore": "Omnivor",
 	"save": "Speichern",
+	"saved": "Gespeichert",
 	"saveAndContinue": "Speichern und weiter",
 	"loginInformation": "Anmeldeinformationen",
 	"loginName": "Anmeldename",
@@ -405,5 +406,8 @@
 	"pathDoesNotExist": "Der Pfad {path} konnte nicht gefunden werden ({error})",
 	"forbidden": "Zugriff verweigert. Bitte lade ggf. die Seite neu! ({error})",
 	"unauthorized": "Unauthorisiert. Bitte lade ggf. die Seite neu! ({error})",
-	"internalServerError": "Interner Serverfehler."
+	"internalServerError": "Interner Serverfehler.",
+	"valueCannotBeEmpty": "Der angegebene Wert für {field} kann nicht leer sein.",
+	"valueTooShort": "Der angegebene Wert für {field} ist zu kurz.",
+	"pleaseFillOutYourProfileCorrectly": "Bitte stelle sicher, dass <b><a href='/my-account'>dein Profil</a></b> korrekt ausgefüllt ist."
 }
