✨ feat (MUNify): add conference info fields & display them in the dashboard branch: 122-add-general-information-panel-per-conference

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -386,6 +386,7 @@
 	"conferenceLocation": "Ort",
 	"conferenceLanguage": "Konferenzsprache",
 	"conferenceWebsite": "Website",
+	"conferenceInfo": "Konferenzinfo",
 	"conferenceStart": "Startdatum",
 	"conferenceEnd": "Enddatum",
 	"selectADate": "Datum auswählen",
