🚧 wip (MUNify): adding form library branch: 120-add-a-new-state-for-the-conference-post-sign-up-pre-started

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -387,13 +387,13 @@
 	"conferenceLocation": "Ort",
 	"conferenceLanguage": "Konferenzsprache",
 	"conferenceWebsite": "Website",
-	"conferenceStart": "Startdatum",
-	"conferenceEnd": "Enddatum",
+	"conferenceStart": "Konferenz Startdatum",
+	"conferenceEnd": "Konferenz Enddatum",
 	"selectADate": "Datum auswählen",
 	"conferenceImage": "Konferenzbild",
-	"conferenceRegistrationSettings": "Einstellungen zur Anmeldephase",
+	"conferenceTimeSettings": "Einstellung der Konferenzphasen",
 	"conferenceStartRegistration": "Start der Anmeldung",
-	"conferenceEndRegistration": "Ende der Anmeldung",
+	"conferenceStartAssignment": "Start der Zuweisung",
 	"conferenceStatus": "Konferenzstatus",
 	"conferenceStatusPre": "Vor der Konferenz",
 	"conferenceStatusActive": "Aktive Konferenz",
