--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -385,13 +385,13 @@
 	"conferenceLocation": "Location",
 	"conferenceLanguage": "Conference Language",
 	"conferenceWebsite": "Website",
-	"conferenceStart": "Start Date",
-	"conferenceEnd": "End Date",
+	"conferenceStart": "Conference start date",
+	"conferenceEnd": "Conference end date",
 	"selectADate": "Select Date",
 	"conferenceImage": "Conference Image",
-	"conferenceRegistrationSettings": "Settings for the Registration Phase",
-	"conferenceStartRegistration": "Start of Registration",
-	"conferenceEndRegistration": "Registration Deadline",
+	"conferenceTimeSettings": "Settings for the conference phases",
+	"conferenceStartRegistration": "Start of registration",
+	"conferenceStartAssignment": "Start of assignment",
 	"conferenceStatus": "Conference Status",
 	"conferenceStatusPre": "Before the conference",
 	"conferenceStatusActive": "Active Conference",
