🚧 wip (MUNify): tmp branch: 120-add-a-new-state-for-the-conference-post-sign-up-pre-started

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -409,5 +409,7 @@
 	"internalServerError": "Interner Serverfehler.",
 	"valueCannotBeEmpty": "Der angegebene Wert für {field} kann nicht leer sein.",
 	"valueTooShort": "Der angegebene Wert für {field} ist zu kurz.",
-	"pleaseFillOutYourProfileCorrectly": "Bitte stelle sicher, dass <b><a href='/my-account'>dein Profil</a></b> korrekt ausgefüllt ist."
+	"pleaseFillOutYourProfileCorrectly": "Bitte stelle sicher, dass <b><a href='/my-account'>dein Profil</a></b> korrekt ausgefüllt ist.",
+	"changesSuccessful": "Die Änderungen wurden erfolgreich gespeichert.",
+	"toConference": "Zur Konferenz"
 }
