--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -400,5 +400,6 @@
 	"confirmRevokeApplication": "Are you sure you want to revoke the application?",
 	"confirmRotateCode": "Are you sure you want to renew the invitation code?",
 	"reloadToSeeChanges": "Reload the page to see the changes.",
-	"notEnoughData": "Insufficient data"
+	"notEnoughData": "Insufficient data",
+	"changesSuccessful": "The changes were saved successfully."
 }
