⬆️ improvement: small form improvements

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -414,5 +414,7 @@
 	"changesSuccessful": "Die Änderungen wurden erfolgreich gespeichert.",
 	"toConference": "Zur Konferenz",
 	"userNotFound": "Benutzer nicht gefunden",
-	"until": "bis"
+	"until": "bis",
+	"pleaseEnterAValidPhoneNumber": "Bitte gib eine gültige Telefonnummer (inklusive Landesvorwahl) ein.",
+	"noStatement": "Keine Angabe"
 }
